--- a/SupplierRanking/Views/config/css/style.css
+++ b/SupplierRanking/Views/config/css/style.css
@@ -1,4 +1,4 @@
-/*!
+﻿/*!
  * Bootstrap v4.1.0 (https://getbootstrap.com/)
  * Copyright 2011-2018 The Bootstrap Authors
  * Copyright 2011-2018 Twitter, Inc.
@@ -60,7 +60,7 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
+  color: #987C12;
   text-align: left;
   background-color: #fff; }
 
@@ -3552,7 +3552,7 @@ input[type="button"].btn-block {
       color: rgba(0, 0, 0, 0.9); }
 
 .navbar-dark .navbar-brand {
-  color: #fff; }
+  color:#EFB93E; }
   .navbar-dark .navbar-brand:hover, .navbar-dark .navbar-brand:focus {
     color: #fff; }
 
@@ -7418,7 +7418,7 @@ h1, h2, h3, h4, h5,
       right: 0;
       bottom: 0;
       content: '';
-      background: #A00B0B;
+      background: #395C5D;
       opacity: .8; }
     .home-slider .slider-item .slider-text {
       color: #fff;
@@ -7426,7 +7426,7 @@ h1, h2, h3, h4, h5,
       min-height: 700px; }
       .home-slider .slider-item .slider-text h1 {
         font-size: 72px;
-        color: #fff;
+        color: #D0A748;
         line-height: 1.2;
         font-weight: 400; }
         @media (max-width: 991.98px) {
