--- a/SupplierRanking/Views/Home/Index.cshtml
+++ b/SupplierRanking/Views/Home/Index.cshtml
@@ -1,54 +1,12 @@
 ﻿
 @{
     ViewBag.Title = "Index";
-    Layout = null;
+    //Layout = null;
 }
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    @*<title>Vertex - Free Bootstrap 4 Template by Colorlib</title>*@
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
-    <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
-    <link rel="stylesheet" href="css/animate.css">
-
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
-    <link rel="stylesheet" href="css/aos.css">
-    <link rel="stylesheet" href="css/ionicons.min.css">
-    <link rel="stylesheet" href="css/bootstrap-datepicker.css">
-    <link rel="stylesheet" href="css/jquery.timepicker.css">
-
-    <link rel="stylesheet" href="css/flaticon.css">
-    <link rel="stylesheet" href="css/icomoon.css">
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-
-    <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar" data-aos="fade-down" data-aos-delay="500">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">SupplierRanking</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="oi oi-menu"></span> Menu
-            </button>
-            <div class="collapse navbar-collapse" id="ftco-nav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active"><a href="/Home/Index" class="nav-link">Home</a></li>
-                    <li class="nav-item"><a href="/Home/Contato" class="nav-link">Contato</a></li>
-                    <li class="nav-item"><a href="/Home/SobreNos" class="nav-link">Sobre nós</a></li>
-                    <li class="nav-item"><a href="/Home/Contato" class="nav-link">Login</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <!-- END nav -->
-
+    <!-- INÍCIO - Carossel -->
     <section class="home-slider owl-carousel">
-        <div class="slider-item" style="background-image: url('images/bg_1.jpg');">
+        <div class="slider-item" style="background-image: url('/Content/images/bg_1.jpg');">
             <div class="overlay"></div>
             <div class="container">
                 <div class="row slider-text align-items-center">
@@ -59,19 +17,20 @@
                 </div>
             </div>
         </div>
-        <div class="slider-item" style="background-image: url('images/bg_2.jpg');">
-            <div class="overlay"></div>
-            <div class="container">
-                <div class="row slider-text align-items-center">
-                    <div class="col-md-7 col-sm-12 ftco-animate">
-                        <p>We're <strong><a href="#">Vertex</a></strong>, Construction and Development</p>
-                        <h1 class="mb-3">Constructing is our life business</h1>
+        <div class="slider-item" style="background-image: url('/Content/images/bg_2.jpg');">
+                <div class="overlay"></div>
+                <div class="container">
+                    <div class="row slider-text align-items-center">
+                        <div class="col-md-7 col-sm-12 ftco-animate">
+                            <p>We're <strong><a href="#">Vertex</a></strong>, Construction and Development</p>
+                            <h1 class="mb-3">Constructing is our life business</h1>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
     </section>
-    <!-- END slider -->
+    <!-- FIM - Carossel -->
+
     <section class="ftco-counter" id="section-counter">
         <div class="container bg-light">
             <div class="row">
@@ -110,6 +69,7 @@
             </div>
         </div>
     </section>
+
     <section class="ftco-section">
         <div class="container">
             <div class="row justify-content-center mb-5 pb-5">
@@ -157,6 +117,7 @@
             </div>
         </div>
     </section>
+
     <section class="ftco-section bg-light">
         <div class="container">
             <div class="row justify-content-center mb-5 pb-5 ftco-animate">
@@ -166,7 +127,7 @@
             </div>
             <div class="row">
                 <div class="col-md-6 ftco-animate">
-                    <a href="images/image_1.jpg" class="project project-img d-flex justify-content-center image-popup" style="background-image: url(images/image_1.jpg);">
+                    <a href="/Content/images/image_1.jpg" class="project project-img d-flex justify-content-center image-popup" style="background-image: url(/Content/images/image_1.jpg);">
                         <div class="align-self-center icon">
                             <span class="ion-ios-search"></span>
                         </div>
@@ -175,14 +136,14 @@
                 <div class="col-md-6">
                     <div class="row">
                         <div class="col-sm-12 ftco-animate">
-                            <a href="images/image_2.jpg" class="project project-img project-img-2 d-flex justify-content-center image-popup" style="background-image: url(images/image_2.jpg);">
+                            <a href="/Content/images/image_2.jpg" class="project project-img project-img-2 d-flex justify-content-center image-popup" style="background-image: url(/Content/images/image_2.jpg);">
                                 <div class="align-self-center icon">
                                     <span class="ion-ios-search"></span>
                                 </div>
                             </a>
                         </div>
                         <div class="col-sm-12 ftco-animate">
-                            <a href="images/image_3.jpg" class="project project-img project-img-2 d-flex justify-content-center image-popup" style="background-image: url(images/image_3.jpg);">
+                            <a href="/Content/images/image_3.jpg" class="project project-img project-img-2 d-flex justify-content-center image-popup" style="background-image: url(/Content/images/image_3.jpg);">
                                 <div class="align-self-center icon">
                                     <span class="ion-ios-search"></span>
                                 </div>
@@ -194,7 +155,7 @@
         </div>
     </section>
 
-    <section class="ftco-section cover_1" style="background-image: url(images/bg_3.jpg);" data-stellar-background-ratio="0.5">
+    <section class="ftco-section cover_1" style="background-image: url(/Content/images/bg_3.jpg);" data-stellar-background-ratio="0.5">
         <div class="overlay"></div>
         <div class="container">
             <div class="row text-center justify-content-center">
@@ -206,6 +167,7 @@
             </div>
         </div>
     </section>
+
     <section class="ftco-section testimony-section">
         <div class="container-fluid">
             <div class="row justify-content-center mb-5 pb-5">
@@ -217,7 +179,7 @@
                 <div class="carousel owl-carousel ftco-owl">
                     <div class="item text-center">
                         <div class="testimony-wrap p-4 pb-5">
-                            <div class="user-img mb-4" style="background-image: url(images/person_1.jpg)" style="border: 1px solid red;"></div>
+                            <div class="user-img mb-4" style="background-image: url(/Content/images/person_1.jpg)" style="border: 1px solid red;"></div>
                             <div class="text">
                                 <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
                                 <p class="name">Dennis Green</p>
@@ -227,7 +189,7 @@
                     </div>
                     <div class="item text-center">
                         <div class="testimony-wrap p-4 pb-5">
-                            <div class="user-img mb-4" style="background-image: url(images/person_2.jpg)" style="border: 1px solid red;"></div>
+                            <div class="user-img mb-4" style="background-image: url(/Content/images/person_2.jpg)" style="border: 1px solid red;"></div>
                             <div class="text">
                                 <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
                                 <p class="name">Dennis Green</p>
@@ -237,7 +199,7 @@
                     </div>
                     <div class="item text-center">
                         <div class="testimony-wrap p-4 pb-5">
-                            <div class="user-img mb-4" style="background-image: url(images/person_3.jpg)" style="border: 1px solid red;"></div>
+                            <div class="user-img mb-4" style="background-image: url(/Content/images/person_3.jpg)" style="border: 1px solid red;"></div>
                             <div class="text">
                                 <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
                                 <p class="name">Dennis Green</p>
@@ -247,7 +209,7 @@
                     </div>
                     <div class="item text-center">
                         <div class="testimony-wrap p-4 pb-5">
-                            <div class="user-img mb-4" style="background-image: url(images/person_1.jpg)" style="border: 1px solid red;"></div>
+                            <div class="user-img mb-4" style="background-image: url(/Content/images/person_1.jpg)" style="border: 1px solid red;"></div>
                             <div class="text">
                                 <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
                                 <p class="name">Dennis Green</p>
@@ -257,7 +219,7 @@
                     </div>
                     <div class="item text-center">
                         <div class="testimony-wrap p-4 pb-5">
-                            <div class="user-img mb-4" style="background-image: url(images/person_1.jpg)" style="border: 1px solid red;"></div>
+                            <div class="user-img mb-4" style="background-image: url(/Content/images/person_1.jpg)" style="border: 1px solid red;"></div>
                             <div class="text">
                                 <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
                                 <p class="name">Dennis Green</p>
@@ -269,6 +231,7 @@
             </div>
         </div>
     </section>
+
     <section class="ftco-section bg-light">
         <div class="container">
             <div class="row justify-content-center mb-5 pb-5">
@@ -310,6 +273,7 @@
             </div>
         </div>
     </section>
+
     <section class="ftco-section">
         <div class="container">
             <div class="row justify-content-center mb-5 pb-5">
@@ -321,7 +285,7 @@
                 <div class="carousel1 owl-carousel ftco-owl">
                     <div class="item">
                         <div class="blog-entry">
-                            <a href="blog-single.html" class="block-20" style="background-image: url('images/image_5.jpg');">
+                            <a href="blog-single.html" class="block-20" style="background-image: url('/Content/images/image_5.jpg');">
                             </a>
                             <div class="text p-4">
                                 <div class="meta">
@@ -338,7 +302,7 @@
                     </div>
                     <div class="item">
                         <div class="blog-entry" data-aos-delay="100">
-                            <a href="blog-single.html" class="block-20" style="background-image: url('images/image_6.jpg');">
+                            <a href="blog-single.html" class="block-20" style="background-image: url('/Content/images/image_6.jpg');">
                             </a>
                             <div class="text p-4">
                                 <div class="meta">
@@ -355,7 +319,7 @@
                     </div>
                     <div class="item">
                         <div class="blog-entry" data-aos-delay="200">
-                            <a href="blog-single.html" class="block-20" style="background-image: url('images/image_7.jpg');">
+                            <a href="blog-single.html" class="block-20" style="background-image: url('/Content/images/image_7.jpg');">
                             </a>
                             <div class="text p-4">
                                 <div class="meta">
@@ -372,7 +336,7 @@
                     </div>
                     <div class="item">
                         <div class="blog-entry" data-aos-delay="200">
-                            <a href="blog-single.html" class="block-20" style="background-image: url('images/image_8.jpg');">
+                            <a href="blog-single.html" class="block-20" style="background-image: url('/Content/images/image_8.jpg');">
                             </a>
                             <div class="text p-4">
                                 <div class="meta">
@@ -389,7 +353,7 @@
                     </div>
                     <div class="item">
                         <div class="blog-entry" data-aos-delay="200">
-                            <a href="blog-single.html" class="block-20" style="background-image: url('images/image_9.jpg');">
+                            <a href="blog-single.html" class="block-20" style="background-image: url('/Content/images/image_9.jpg');">
                             </a>
                             <div class="text p-4">
                                 <div class="meta">
@@ -409,60 +373,6 @@
         </div>
     </section>
 
-    <footer class="ftco-footer ftco-bg-dark ftco-section">
-        <div class="container">
-            <div class="row mb-5">
-                <div class="col-md">
-                    <div class="ftco-footer-widget mb-4">
-                        <h2 class="ftco-heading-2">Vertex</h2>
-                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    </div>
-                </div>
-                <div class="col-md">
-                    <div class="ftco-footer-widget mb-4">
-                        <h2 class="ftco-heading-2">Quick Links</h2>
-                        <ul class="list-unstyled">
-                            <li><a href="#" class="py-2 d-block">About</a></li>
-                            <li><a href="#" class="py-2 d-block">Project</a></li>
-                            <li><a href="#" class="py-2 d-block">Services</a></li>
-                            <li><a href="#" class="py-2 d-block">Blog</a></li>
-                            <li><a href="#" class="py-2 d-block">Contact</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md">
-                    <div class="ftco-footer-widget mb-4">
-                        <h2 class="ftco-heading-2">Contact Information</h2>
-                        <ul class="list-unstyled">
-                            <li><a href="#" class="py-2 d-block">198 West 21th Street, Suite 721 New York NY 10016</a></li>
-                            <li><a href="#" class="py-2 d-block">+ 1235 2355 98</a></li>
-                            <li><a href="#" class="py-2 d-block">info@yoursite.com</a></li>
-                            <li><a href="#" class="py-2 d-block">email@email.com</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md">
-                    <div class="ftco-footer-widget mb-4">
-                        <ul class="ftco-footer-social list-unstyled float-md-right float-lft">
-                            <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                            <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                            <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12 text-center">
-                    <p>
-                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        Copyright &copy;
-                        <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    </p>
-                </div>
-            </div>
-        </div>
-    </footer>
     <!-- Modal -->
     <div class="modal fade" id="modalRequest" tabindex="-1" role="dialog" aria-labelledby="modalAppointmentLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -511,26 +421,6 @@
             </div>
         </div>
     </div>
+
     <!-- loader -->
     <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" /><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00" /></svg></div>
-
-    <script src="js/jquery.min.js"></script>
-    <script src="js/jquery-migrate-3.0.1.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.easing.1.3.js"></script>
-    <script src="js/jquery.waypoints.min.js"></script>
-    <script src="js/jquery.stellar.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/aos.js"></script>
-    <script src="js/jquery.animateNumber.min.js"></script>
-    <script src="js/bootstrap-datepicker.js"></script>
-    <script src="js/jquery.timepicker.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-    <script src="js/google-map.js"></script>
-    <script src="js/main.js"></script>
-
-</body>
-</html>
-
