--- a/SupplierRanking/Views/Shared/_Layout.cshtml
+++ b/SupplierRanking/Views/Shared/_Layout.cshtml
@@ -1,40 +1,152 @@
 ﻿<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
-    <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <script src="~/Scripts/modernizr-2.6.2.js"></script>
-</head>
-<body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <title>@ViewBag.Title - Supplier Ranking</title>
+
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700">
+        <link rel="stylesheet" type="text/css" href="~/Content/config/css/open-iconic-bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="~/Content/config/css/animate.css">
+
+        <link rel="stylesheet" type="text/css" href="~/Content/config/css/owl.carousel.min.css">
+        <link rel="stylesheet" type="text/css" href="~/Content/config/css/owl.theme.default.min.css">
+        <link rel="stylesheet" type="text/css" href="~/Content/config/css/magnific-popup.css">
+        <link rel="stylesheet" type="text/css" href="~/Content/config/css/aos.css">
+        <link rel="stylesheet" type="text/css" href="~/Content/config/css/ionicons.min.css">
+        <link rel="stylesheet" type="text/css" href="~/Content/config/css/bootstrap/bootstrap-datepicker.css">
+        <link rel="stylesheet" type="text/css" href="~/Content/config/css/jquery.timepicker.css">
+
+        <link rel="stylesheet" type="text/css" href="~/Content/config/css/flaticon.css">
+        <link rel="stylesheet" type="text/css" href="~/Content/config/css/icomoon.css">
+        <link rel="stylesheet" type="text/css" href="~/Content/config/css/style.css">
+
+        <link rel="stylesheet" type="text/css" href="~/Content/css/style.css">
+    </head>
+
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar" data-aos="fade-down" data-aos-delay="500">
+            <div class="container">
+                <a class="navbar-brand" href="index.html">Supplier Ranking</a>
+                <button class="navbar-toggler"
+                        type="button"
+                        data-toggle="collapse"
+                        data-target="#ftco-nav"
+                        aria-controls="ftco-nav"
+                        aria-expanded="false"
+                        aria-label="Toggle navigation">
+                    <span class="oi oi-menu"></span> Menu
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                <div id="ftco-nav" class="collapse navbar-collapse">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">
+                                Home
+                            </a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="about.html">
+                                Sobre Nós
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="pricing.html">
+                                Planos
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">
+                                Contato
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="">
+                                Acessar
+                            </a>
+                        </li>
+                        <!--
+                        <li class="nav-item"><a href="project.html" class="nav-link">Projects</a></li>
+                        <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
+                        -->
+                    </ul>
+                </div>
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                </ul>
-            </div>
+        </nav>
+
+        <div>
+            @RenderBody()
         </div>
-    </div>
 
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+        <footer class="ftco-footer ftco-bg-dark ftco-section">
+            <div class="container">
+                <div class="row mb-5">
+                    <div class="col-md">
+                        <div class="ftco-footer-widget mb-4">
+                            <h2 class="ftco-heading-2">Vertex</h2>
+                            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                        </div>
+                    </div>
+                    <div class="col-md">
+                        <div class="ftco-footer-widget mb-4">
+                            <h2 class="ftco-heading-2">Quick Links</h2>
+                            <ul class="list-unstyled">
+                                <li><a href="#" class="py-2 d-block">About</a></li>
+                                <li><a href="#" class="py-2 d-block">Project</a></li>
+                                <li><a href="#" class="py-2 d-block">Services</a></li>
+                                <li><a href="#" class="py-2 d-block">Blog</a></li>
+                                <li><a href="#" class="py-2 d-block">Contact</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-md">
+                        <div class="ftco-footer-widget mb-4">
+                            <h2 class="ftco-heading-2">Contact Information</h2>
+                            <ul class="list-unstyled">
+                                <li><a href="#" class="py-2 d-block">198 West 21th Street, Suite 721 New York NY 10016</a></li>
+                                <li><a href="#" class="py-2 d-block">+ 1235 2355 98</a></li>
+                                <li><a href="#" class="py-2 d-block">info@yoursite.com</a></li>
+                                <li><a href="#" class="py-2 d-block">email@email.com</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-md">
+                        <div class="ftco-footer-widget mb-4">
+                            <ul class="ftco-footer-social list-unstyled float-md-right float-lft">
+                                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
+                                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
+                                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <p>
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            Copyright &copy;
+                            <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                        </p>
+                    </div>
+                </div>
+            </div>
         </footer>
-    </div>
 
-    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
-    <script src="~/Scripts/bootstrap.min.js"></script>
-</body>
+        <script src="~/Content/config/js/jquery.min.js"></script>
+        <script src="~/Content/config/js/jquery-migrate-3.0.1.min.js"></script>
+        <script src="~/Content/config/js/popper.min.js"></script>
+        <script src="~/Content/config/js/bootstrap.min.js"></script>
+        <script src="~/Content/config/js/jquery.easing.1.3.js"></script>
+        <script src="~/Content/config/js/jquery.waypoints.min.js"></script>
+        <script src="~/Content/config/js/jquery.stellar.min.js"></script>
+        <script src="~/Content/config/js/owl.carousel.min.js"></script>
+        <script src="~/Content/config/js/jquery.magnific-popup.min.js"></script>
+        <script src="~/Content/config/js/aos.js"></script>
+        <script src="~/Content/config/js/jquery.animateNumber.min.js"></script>
+        <script src="~/Content/config/js/bootstrap-datepicker.js"></script>
+        <script src="~/Content/config/js/jquery.timepicker.min.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+        <script src="~/Content/config/js/google-map.js"></script>
+        <script src="~/Content/config/js/main.js"></script>
+    </body>
 </html>
