La - Separacao e reorganizacao do style

--- a/SupplierRanking/Content/css/style.css
+++ b/SupplierRanking/Content/css/style.css
@@ -17,8 +17,81 @@
 
 
 @import "/Content/css/menu.css";
+@import "/Content/css/home_slider.css";
 
 .text-primary {
-    color: #0962EA !important; 
+    color: #013B51 !important;
 }
+
+.text-golden {
+    color: #DAA520 !important;
+}
+
+.text-white {
+    color: #FFF !important;
+}
+
+.bg-light {
+    background: #FAFAFA!important;
+}
+
+.bg-white {
+    background: #FFF;
+}
+
+.bg-primary {
+    background: #013B51;
+}
+
+.bg-golden {
+    background: #DAA520;
+}
+
+.btn {
+    cursor: pointer;
+    border-radius: 0px;
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
+}
+
+    .btn:hover, .btn:active, .btn:focus {
+        outline: none;
+    }
+
+    .btn.btn-primary {
+        background: #0962ea;
+        border: 2px solid #0962ea;
+        color: #fff;
+    }
+
+        .btn.btn-primary:hover {
+            border: 2px solid #0962ea;
+            background: transparent;
+            color: #0962ea;
+        }
+
+        .btn.btn-primary.btn-outline-primary {
+            border: 2px solid #0962ea;
+            background: transparent;
+            color: #0962ea;
+        }
+
+            .btn.btn-primary.btn-outline-primary:hover {
+                border: 2px solid transparent;
+                background: #0962ea;
+                color: #000;
+            }
+
+    .btn.btn-outline-white {
+        border-color: rgba(255, 255, 255, 0.8);
+        background: none;
+        border-radius: 0px;
+        border-width: 2px;
+    }
+
+        .btn.btn-outline-white:hover, .btn.btn-outline-white:focus, .btn.btn-outline-white:active {
+            background: #fff;
+            border-color: #fff;
+            color: #000;
+        }
 
