--- a/SupplierRanking/Content/config/css/style.css
+++ b/SupplierRanking/Content/config/css/style.css
@@ -7277,10 +7277,7 @@ h1, h2, h3, h4, h5,
   color: #000;
   font-weight: 300; }
 
-.text-primary {
-  color: #0962ea !important; }
-
-.ftco-navbar-light {
+/*.ftco-navbar-light {
   background: transparent !important;
   position: absolute;
   left: 0;
@@ -7399,139 +7396,8 @@ h1, h2, h3, h4, h5,
         font-size: 28px; }
 
 .navbar-brand span {
-  font-size: 28px; }
+  font-size: 28px; }*/
 
-.home-slider {
-  z-index: 0;
-  position: relative; }
-  .home-slider .slider-item {
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    height: calc(100vh - 117px);
-    min-height: 700px;
-    position: relative; }
-    .home-slider .slider-item .overlay {
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      content: '';
-      background: #395C5D;
-      opacity: .8; }
-    .home-slider .slider-item .slider-text {
-      color: #fff;
-      height: calc(100vh - 117px);
-      min-height: 700px; }
-      .home-slider .slider-item .slider-text h1 {
-        font-size: 72px;
-        color: #D0A748;
-        line-height: 1.2;
-        font-weight: 400; }
-        @media (max-width: 991.98px) {
-          .home-slider .slider-item .slider-text h1 {
-            font-size: 40px; } }
-      .home-slider .slider-item .slider-text p {
-        font-size: 20px;
-        line-height: 1.5;
-        font-weight: 300;
-        color: rgba(255, 255, 255, 0.8); }
-        .home-slider .slider-item .slider-text p strong {
-          font-weight: 700; }
-          .home-slider .slider-item .slider-text p strong a {
-            color: #fff; }
-      .home-slider .slider-item .slider-text .breadcrumbs {
-        text-transform: uppercase;
-        font-size: 13px;
-        letter-spacing: 1px; }
-        .home-slider .slider-item .slider-text .breadcrumbs span {
-          border-bottom: 2px solid rgba(255, 255, 255, 0.1); }
-          .home-slider .slider-item .slider-text .breadcrumbs span a {
-            color: #fff; }
-  .home-slider.inner-page .slider-item {
-    height: calc(50vh - 117px);
-    min-height: 500px; }
-    .home-slider.inner-page .slider-item .slider-text {
-      color: #fff;
-      height: calc(50vh - 117px);
-      min-height: 500px; }
-  .home-slider .owl-dots {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 120px;
-    width: 100%;
-    text-align: center; }
-    .home-slider .owl-dots .owl-dot {
-      width: 18px;
-      height: 18px;
-      margin: 5px;
-      border-radius: 50%;
-      background: #e6e6e6;
-      background: none;
-      border: 2px solid rgba(255, 255, 255, 0.5);
-      outline: none !important;
-      position: relative;
-      -webkit-transition: .3s all ease;
-      -o-transition: .3s all ease;
-      transition: .3s all ease;
-      display: inline-block; }
-      .home-slider .owl-dots .owl-dot span {
-        position: absolute;
-        width: 6px;
-        height: 6px;
-        background: rgba(255, 255, 255, 0.5);
-        border-radius: 50% !important;
-        left: 50%;
-        top: 50%;
-        display: block;
-        -webkit-transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-        transform: translate(-50%, -50%); }
-      .home-slider .owl-dots .owl-dot.active {
-        border: 2px solid white; }
-        .home-slider .owl-dots .owl-dot.active span {
-          background: white; }
-
-.bg-light {
-  background: #fafafa !important; }
-
-.bg-primary {
-  background: #0962ea; }
-
-.btn {
-  cursor: pointer;
-  border-radius: 0px;
-  -webkit-box-shadow: none !important;
-  box-shadow: none !important; }
-  .btn:hover, .btn:active, .btn:focus {
-    outline: none; }
-  .btn.btn-primary {
-    background: #0962ea;
-    border: 2px solid #0962ea;
-    color: #fff; }
-    .btn.btn-primary:hover {
-      border: 2px solid #0962ea;
-      background: transparent;
-      color: #0962ea; }
-    .btn.btn-primary.btn-outline-primary {
-      border: 2px solid #0962ea;
-      background: transparent;
-      color: #0962ea; }
-      .btn.btn-primary.btn-outline-primary:hover {
-        border: 2px solid transparent;
-        background: #0962ea;
-        color: #000; }
-  .btn.btn-outline-white {
-    border-color: rgba(255, 255, 255, 0.8);
-    background: none;
-    border-radius: 0px;
-    border-width: 2px; }
-    .btn.btn-outline-white:hover, .btn.btn-outline-white:focus, .btn.btn-outline-white:active {
-      background: #fff;
-      border-color: #fff;
-      color: #000; }
 
 .services {
   border: 2px dashed #dbe9fe;
