--- a/SupplierRanking/Views/Shared/_Layout.cshtml
+++ b/SupplierRanking/Views/Shared/_Layout.cshtml
@@ -25,9 +25,14 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar" data-aos="fade-down" data-aos-delay="500">
+        <!-- INÍCIO - MENU -->
+        <nav id="ftco-navbar"
+             class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light"
+             data-aos="fade-down" data-aos-delay="500">
             <div class="container">
                 <a class="navbar-brand" href="index.html">Supplier Ranking</a>
+
+                <!-- INÍCIO - Menu Hamburguer -->
                 <button class="navbar-toggler"
                         type="button"
                         data-toggle="collapse"
@@ -37,7 +42,10 @@
                         aria-label="Toggle navigation">
                     <span class="oi oi-menu"></span> Menu
                 </button>
-                <div id="ftco-nav" class="collapse navbar-collapse">
+                <!-- FIM - Menu Hamburguer -->
+
+                <div id="ftco-nav"
+                     class="collapse navbar-collapse">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
                             <a class="nav-link" href="index.html">
@@ -65,18 +73,22 @@
                             </a>
                         </li>
                         <!--
-                        <li class="nav-item"><a href="project.html" class="nav-link">Projects</a></li>
-                        <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-                        -->
+                    <li class="nav-item"><a href="project.html" class="nav-link">Projects</a></li>
+                    <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
+                    -->
                     </ul>
                 </div>
             </div>
         </nav>
-
+        <!-- FIM - MENU -->
+        
+        <!-- INÍCIO - CONTEÚDO -->
         <div>
             @RenderBody()
         </div>
-
+        <!-- FIM - CONTEÚDO -->
+        
+        <!-- INÍCIO - RODAPÉ -->
         <footer class="ftco-footer ftco-bg-dark ftco-section">
             <div class="container">
                 <div class="row mb-5">
@@ -131,6 +143,7 @@
                 </div>
             </div>
         </footer>
+        <!-- FIM - RODAPÉ -->
 
         <script src="~/Content/config/js/jquery.min.js"></script>
         <script src="~/Content/config/js/jquery-migrate-3.0.1.min.js"></script>
