La - Inclusao do home_slider e ajustes no layout

--- a/SupplierRanking/Views/Shared/_Layout.cshtml
+++ b/SupplierRanking/Views/Shared/_Layout.cshtml
@@ -48,22 +48,22 @@
                      class="collapse navbar-collapse">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">
+                            <a class="nav-link" href="~/Views/Home/Index.cshtml">
                                 Home
                             </a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="about.html">
+                            <a class="nav-link" href="~/Views/Home/SobreNos.cshtml">
                                 Sobre Nós
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="pricing.html">
+                            <a class="nav-link" href="~/Views/Home/Planos.cshtml">
                                 Planos
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">
+                            <a class="nav-link" href="~/Views/Home/Contato.cshtml">
                                 Contato
                             </a>
                         </li>
