--- a/SupplierRanking/Views/Home/Servicos.cshtml
+++ b/SupplierRanking/Views/Home/Servicos.cshtml
@@ -81,7 +81,7 @@
             <div class="row">
                 <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
                     <div class="media block-6 services p-3 py-4 d-block text-center">
-                        <div class="icon mb-3"><span class="flaticon-maintenance"></span></div>
+                        <div class="icon mb-3"><span class="flaticon-maintenance text-primary"></span></div>
                         <div class="media-body">
                             <h3 class="heading">Construction Management</h3>
                             <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
