--- a/SupplierRanking/Views/config/scss/style.scss
+++ b/SupplierRanking/Views/config/scss/style.scss
@@ -201,7 +201,7 @@ h1, h2, h3, h4, h5,
 	}
 }
 
-.home-slider {
+/*.home-slider {
 	z-index: 0;
 	position: relative;
 
@@ -234,7 +234,7 @@ h1, h2, h3, h4, h5,
 				@include media-breakpoint-down(md) {
 					font-size: 40px;
 				}
-			}
+			}*/
 			p {
 				font-size: 20px;
 				line-height: 1.5;
