--- a/SupplierRanking/Content/css/pricing.css
+++ b/SupplierRanking/Content/css/pricing.css
@@ -1,5 +1,5 @@
 ﻿
-/***** CONFIGURAÇÃO DOS PLANOSS *****/
+/***** CONFIGURAÇÃO DOS PLANOS *****/
 .pricing {
 	border: 2px dashed #dbe9fe;
 	border-left: 2px solid #dbe9fe;
