--- a/SupplierRanking/Content/css/style.css
+++ b/SupplierRanking/Content/css/style.css
@@ -1,4 +1,5 @@
-﻿@import "/Content/css/menu.css";
+﻿/***** IMPORT DOS CSS *****/
+@import "/Content/css/menu.css";
 @import "/Content/css/home_slider.css";
 
 @import "../css/footer.css";
