--- a/SupplierRanking/Views/Home/Planos.cshtml
+++ b/SupplierRanking/Views/Home/Planos.cshtml
@@ -13,7 +13,7 @@
             <div class="container">
                 <div class="row slider-text align-items-center">
                     <div class="col-md-7 col-sm-12 ftco-animate">
-                        <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span>Pricing</span></p>
+                        
                         <h1 class="mb-3">Planos</h1>
                     </div>
                 </div>
@@ -39,7 +39,15 @@
                 </div>
                 <div class="col-md-4 text-center ftco-animate">
                     <div class="pricing p-4 py-5">
-                        <div class="icon mb-2"><span class="flaticon-skyline"></span></div>
+                        <div class="icon mb-2">
+                            <svg>
+                                <use x="20px" y="20px"
+                                     xlink:href="~/Content/config/fonts/svg/icone.svg;"
+                                     style="enable-background:new 0 0 456 456;" 
+                                     xml:space="preserve">
+                                </use>
+                             </svg>  
+                        </div>
                         <h3 class="mb-3">Premium</h3>
                         <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
                         <p class="price mb-4 py-3"><span class="mr-2 currency">R$29,90</span> <span class="per">por mês</span></p>
@@ -126,6 +134,4 @@
         </div>
     </div>
 
-    <!-- loader -->
-    <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" /><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00" /></svg></div>
-
+   
