--- a/SupplierRanking/Views/Shared/_Layout.cshtml
+++ b/SupplierRanking/Views/Shared/_Layout.cshtml
@@ -86,58 +86,83 @@
         
         <!-- INÍCIO - RODAPÉ -->
         <footer class="ftco-footer ftco-bg-dark ftco-section">
-            <div class="container">
-                <div class="row mb-5">
-                    <div class="col-md">
-                        <div class="ftco-footer-widget mb-4">
-                            <h2 class="ftco-heading-2">Vertex</h2>
-                            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                        </div>
-                    </div>
-                    <div class="col-md">
-                        <div class="ftco-footer-widget mb-4">
-                            <h2 class="ftco-heading-2">Quick Links</h2>
-                            <ul class="list-unstyled">
-                                <li><a href="#" class="py-2 d-block">About</a></li>
-                                <li><a href="#" class="py-2 d-block">Project</a></li>
-                                <li><a href="#" class="py-2 d-block">Services</a></li>
-                                <li><a href="#" class="py-2 d-block">Blog</a></li>
-                                <li><a href="#" class="py-2 d-block">Contact</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-md">
-                        <div class="ftco-footer-widget mb-4">
-                            <h2 class="ftco-heading-2">Contact Information</h2>
-                            <ul class="list-unstyled">
-                                <li><a href="#" class="py-2 d-block">198 West 21th Street, Suite 721 New York NY 10016</a></li>
-                                <li><a href="#" class="py-2 d-block">+ 1235 2355 98</a></li>
-                                <li><a href="#" class="py-2 d-block">info@yoursite.com</a></li>
-                                <li><a href="#" class="py-2 d-block">email@email.com</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-md">
-                        <div class="ftco-footer-widget mb-4">
-                            <ul class="ftco-footer-social list-unstyled float-md-right float-lft">
-                                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12 text-center">
-                        <p>
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                            Copyright &copy;
-                            <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        </p>
-                    </div>
-                </div>
-            </div>
+        
+              <div class="container">
+                  <div style="width: 1185px;
+                              height: 291px;
+                              background-color: #0000ff1a;
+                              border-color: #f9f9f999;
+                              border-style: solid" class="rodape">
+                                                                                                     
+                      <div class="row mb-5">
+                          <div class="col-md">
+                              <div class="ftco-footer-widget mb-4">
+
+                                  <h2 class="ftco-heading-2">Suplier Ranking</h2>
+                                  <p>
+                                      O Website feito para você que é fornecedor ou comprador
+                                      de mercadorias para sua empresa.
+                                  </p>
+                              </div>
+                          </div>
+                          <div class="col-md">
+                              <div class="ftco-footer-widget mb-4">
+                                  <h2 class="ftco-heading-2">Páginas</h2>
+                                  <ul class="list-unstyled">
+                                      <li><a href="#" class="py-2 d-block">Sobre nós</a></li>
+                                      <li><a href="#" class="py-2 d-block">Planos</a></li>
+                                      <li><a href="#" class="py-2 d-block">Contato</a></li>
+                                      <li><a href="#" class="py-2 d-block">Acesso</a></li>
+                                  </ul>
+
+                              </div>
+                          </div>
+                          <div class="col-md">
+                              <div class="ftco-footer-widget mb-4">
+                                  <h2 class="ftco-heading-2">Entre em contato por: </h2>
+                                  <ul class="list-unstyled">
+                                      <li><a href="#" class="py-2 d-block">Av. da Saudade , Campinas - SP</a></li>
+                                      <li><a href="#" class="py-2 d-block">+55 (19)97788-2233</a></li>
+                                      <li><a href="#" class="py-2 d-block">suportesuplierranking@hotmail.com</a></li>
+
+                                  </ul>
+                              </div>
+                          </div>
+                          <div class="col-md">
+                              <div class="ftco-footer-widget mb-4">
+                                  <ul class="ftco-footer-social list-unstyled float-md-right float-lft">
+                                      <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
+                                      <li class="ftco-animate"><a href="#"><span style="margin-left:-74px;margin-top:162px" class="icon-facebook"></span></a></li>
+                                      <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                                  </ul>
+                              </div>
+                          </div>
+
+
+                      </div>
+
+
+                  </div>
+                
+
+
+
+              </div>
+
+              <div style="marging-left:-1000px" class="row">
+                  <div class="col-md-12 text-center">
+                      <p>
+                          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                          Copyright &copy;
+                          <script>document.write(new Date().getFullYear());</script> All rights reserved | This site was made by <i class="icon-compass" aria-hidden="true">
+                          </i> by <a href="https://colorlib.com" target="_blank">Suplier Ranking</a>
+                          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                      </p>
+                  </div>
+              </div>
+
+          
+           
         </footer>
         <!-- FIM - RODAPÉ -->
 
