--- a/SupplierRanking/Content/css/footer.css
+++ b/SupplierRanking/Content/css/footer.css
@@ -1,6 +1,8 @@
-﻿.ftco-footer {
+﻿
+/**CONFIGURAÇÃO DE RODAPÉ**/
+.ftco-footer {
 	font-size: 16px;
-	background:#393939;
+	background:#134e74;
 	padding: 8em 0;
 }
 
@@ -47,7 +49,7 @@
 	width: 60px;
 	display: block;
 	float: left;
-	background: rgba(255, 255, 255, 0.05);
+	background: rgba(0, 0, 0, 0);
 	border-radius: 50%;
 	position: relative;
 }
@@ -64,4 +66,12 @@
 
 .ftco-footer-social li a:hover {
 	color: #fff;
+}
+
+
+ .ftco-footer table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+
 }
