--- a/SupplierRanking/Views/Home/Index.cshtml
+++ b/SupplierRanking/Views/Home/Index.cshtml
@@ -3,7 +3,8 @@
 
 <!-- INÍCIO - Carossel -->
 <section class="home-slider owl-carousel">
-    <div class="slider-item" style="background-image: url('/Content/images/bg_1.jpg');">
+    <div class="slider-item" 
+         style="background-image: url('/Content/images/bg_1.jpg');">
         <div class="overlay"></div>
         <div class="container">
             <div class="row slider-text align-items-center">
@@ -77,7 +78,7 @@
     <div class="container">
         <div class="row justify-content-center mb-5 pb-5">
             <div class="col-md-7 text-center heading-section ftco-animate">
-                <h2>Your Main Features &amp; Benefits</h2>
+                <h2>Como iremos te ajudar?</h2>
             </div>
         </div>
         <div class="row">
@@ -127,7 +128,7 @@
     <div class="container">
         <div class="row justify-content-center mb-5 pb-5 ftco-animate">
             <div class="col-md-7 text-center heading-section">
-                <h2>We love to share our accomplishments</h2>
+                <h2>Alguns dos nossos melhores Fornecedores...</h2>
             </div>
         </div>
         <div class="row">
@@ -161,27 +162,27 @@
 </section>
 <!-- FIM - Fornecedores -->
 
-<!-- INÍCIO - Experience Our Advance Equipments -->
+<!-- INÍCIO - Experimente Agora -->
 <section class="ftco-section cover_1" style="background-image: url(/Content/images/bg_3.jpg);" data-stellar-background-ratio="0.5">
     <div class="overlay"></div>
     <div class="container">
         <div class="row text-center justify-content-center">
             <div class="col-md-8 ftco-animate">
-                <h2 class="heading">Experience Our Advance Equipments</h2>
+                <h2 class="heading">Experimente Agora</h2>
                 <p class="sub-heading mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi unde impedit, necessitatibus, soluta sit quam minima expedita atque corrupti reiciendis.</p>
                 <p><a href="#" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modalRequest">Request a Quote</a></p>
             </div>
         </div>
     </div>
 </section>
-<!-- FIM - Experience Our Advance Equipments -->
+<!-- FIM - Experimente Agora -->
 
 <!-- INÍCIO - Planos -->
 <section class="ftco-section bg-light">
     <div class="container">
         <div class="row justify-content-center mb-5 pb-5">
             <div class="col-md-7 text-center heading-section ftco-animate">
-                <h2>Pricing</h2>
+                <h2>Planos</h2>
             </div>
         </div>
         <div class="row">
@@ -267,6 +268,3 @@
     </div>
 </div>
 <!-- INÍCIO - MODAL -->
-
-<!-- Loader -->
-<div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" /><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00" /></svg></div>
