--- a/SupplierRanking/Views/Shared/_Layout.cshtml
+++ b/SupplierRanking/Views/Shared/_Layout.cshtml
@@ -48,27 +48,27 @@
                      class="collapse navbar-collapse">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="~/Views/Home/Index.cshtml">
+                            <a class="nav-link" href="/Home/Index">
                                 Home
                             </a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="~/Views/Home/SobreNos.cshtml">
+                            <a class="nav-link" href="/Home/SobreNos">
                                 Sobre Nós
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="~/Views/Home/Planos.cshtml">
+                            <a class="nav-link" href="/Home/Planos">
                                 Planos
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="~/Views/Home/Contato.cshtml">
+                            <a class="nav-link" href="/Home/Contato">
                                 Contato
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="">
+                            <a class="nav-link" href="#">
                                 Acessar
                             </a>
                         </li>
@@ -140,6 +140,26 @@
             </div>
         </footer>
         <!-- FIM - RODAPÉ -->
+
+        <!-- INÍCIO - Loader -->
+        <div id="ftco-loader"
+             class="show fullscreen">
+            <svg class="circular" 
+                 width="48px" height="48px">
+                <circle class="path-bg" 
+                        cx="24" cy="24" 
+                        r="22" fill="none" 
+                        stroke-width="4" 
+                        stroke="#EEEEEE" />
+                <circle class="path" 
+                        cx="24" cy="24" 
+                        r="22" fill="none" 
+                        stroke-width="4" 
+                        stroke-miterlimit="10" 
+                        stroke="#F96D00" />
+            </svg>
+        </div>
+        <!-- FIM - Loader -->
 
         <script src="~/Content/config/js/jquery.min.js"></script>
         <script src="~/Content/config/js/jquery-migrate-3.0.1.min.js"></script>
