--- a/SupplierRanking/Views/Home/Planos.cshtml
+++ b/SupplierRanking/Views/Home/Planos.cshtml
@@ -40,13 +40,7 @@
                 <div class="col-md-4 text-center ftco-animate">
                     <div class="pricing p-4 py-5">
                         <div class="icon mb-2">
-                            <svg>
-                                <use x="20px" y="20px"
-                                     xlink:href="~/Content/config/fonts/svg/icone.svg;"
-                                     style="enable-background:new 0 0 456 456;" 
-                                     xml:space="preserve">
-                                </use>
-                             </svg>  
+                            <span class="flaticon-skyline"></span>
                         </div>
                         <h3 class="mb-3">Premium</h3>
                         <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
