--- a/SupplierRanking/Content/config/css/flaticon.css
+++ b/SupplierRanking/Content/config/css/flaticon.css
@@ -1,3 +1,4 @@
+
 /*
     Flaticon icon font: Flaticon
     Creation date: 01/07/2018 04:33
@@ -9,7 +10,7 @@
   src: url("../fonts/flaticon/font/Flaticon.eot?#iefix") format("embedded-opentype"),
        url("../fonts/flaticon/font/Flaticon.woff") format("woff"),
        url("../fonts/flaticon/font/Flaticon.ttf") format("truetype"),
-       url("../fonts/svg/icone.svg") format("svg");
+       url("../fonts/flaticon/font/Flaticon.svg") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -17,7 +18,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: "Flaticon";
-    src: url("../fonts/svg/icone.svg") format("svg");
+    src: url("../fonts/flaticon/font/Flaticon.svg") format("svg");
   }
 }
 
@@ -35,11 +36,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-/*.flaticon-construction:before { content: "\f100"; }
+.flaticon-construction:before { content: "\f100"; }
 .flaticon-engineer-1:before { content: "\f101"; }
 .flaticon-engineer:before { content: "\f102"; }
 .flaticon-conveyor:before { content: "\f103"; }
 .flaticon-maintenance:before { content: "\f104"; }
-.flaticon-sketch:before { content: "\f105"; }*/
+.flaticon-sketch:before { content: "\f105"; }
 .flaticon-skyline:before { content: "\f106"; }
 
