--- a/SupplierRanking/Views/Login/Login.cshtml
+++ b/SupplierRanking/Views/Login/Login.cshtml
@@ -7,7 +7,7 @@
         <div class="wrap-login100">
             <div class="login100-pic js-tilt" data-tilt>
 
-                <img src="~/Content/images/logo2.png" alt="IMG" />
+                @*<img style="width:300px;heigth:300px;"src="~/Content/images/logo2.png" alt="IMG" />*@
             </div>
 
             <form class="login100-form validate-form">
