--- a/SupplierRanking/Views/Shared/LoginLayout.cshtml
+++ b/SupplierRanking/Views/Shared/LoginLayout.cshtml
@@ -2,10 +2,26 @@
 	
 <html>
 <head>
+    <link href="~/Content/vendor/animate/animate.css" rel="stylesheet" />
 
-  
-
-
+    <link href="~/Content/vendor/bootstrap/css/bootstrap-grid.css" rel="stylesheet" />
+    <link href="~/Content/vendor/bootstrap/css/bootstrap-grid.min.css" rel="stylesheet" />
+    <link href="~/Content/vendor/bootstrap/css/bootstrap-reboot.css" rel="stylesheet" />
+    <link href="~/Content/vendor/bootstrap/css/bootstrap-reboot.min.css" rel="stylesheet" />
+    <link href="~/Content/vendor/bootstrap/css/bootstrap.css" rel="stylesheet" />
+    <link href="~/Content/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <a href="~/Content/vendor/bootstrap/css/bootstrap-grid.css.map">~/Content/vendor/bootstrap/css/bootstrap-grid.css.map</a>
+    <a href="~/Content/vendor/bootstrap/css/bootstrap-grid.min.css.map">~/Content/vendor/bootstrap/css/bootstrap-grid.min.css.map</a>
+    <a href="~/Content/vendor/bootstrap/css/bootstrap-reboot.css.map">~/Content/vendor/bootstrap/css/bootstrap-reboot.css.map</a>
+    <a href="~/Content/vendor/bootstrap/css/bootstrap-reboot.min.css.map">~/Content/vendor/bootstrap/css/bootstrap-reboot.min.css.map</a>
+    <a href="~/Content/vendor/bootstrap/css/bootstrap.css.map">~/Content/vendor/bootstrap/css/bootstrap.css.map</a>
+    <a href="~/Content/vendor/bootstrap/css/bootstrap.min.css.map">~/Content/vendor/bootstrap/css/bootstrap.min.css.map</a>
+    <link href="~/Content/vendor/css-hamburgers/hamburgers.css" rel="stylesheet" />
+    <link href="~/Content/vendor/css-hamburgers/hamburgers.min.css" rel="stylesheet" />
+    <link href="~/Content/vendor/select2/select2.css" rel="stylesheet" />
+    <link href="~/Content/vendor/select2/select2.min.css" rel="stylesheet" />
+    <link href="~/Content/css/main.css" rel="stylesheet" />
+    <link href="~/Content/css/util.css" rel="stylesheet" />
 </head>
 <body>
 <div class="limiter">
@@ -13,7 +29,7 @@
         <div class="wrap-login100">
             <div class="login100-pic js-tilt" data-tilt>
 
-                <img src="~/Content/images/logo2.png" alt="IMG" />
+                
             </div>
 
             <form class="login100-form validate-form">
@@ -62,12 +78,20 @@
         </div>
     </div>
 </div>
-    @RenderBody();
-
-<!--<a href="~/Controllers/HomeController.cs">~/Controllers/HomeController.cs</a>-->
-
    
 
+<!--<a href="~/Controllers/HomeController.cs">~/Controllers/HomeController.cs</a>-->
+    @RenderBody();
+
+    <script src="~/Content/vendor/bootstrap/js/bootstrap.js"></script>
+    <script src="~/Content/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="~/Content/vendor/bootstrap/js/popper.js"></script>
+    <script src="~/Content/vendor/bootstrap/js/popper.min.js"></script>
+    <script src="~/Content/vendor/bootstrap/js/tooltip.js"></script>
+    <script src="~/Content/vendor/jquery/jquery-3.2.1.min.js"></script>
+    <script src="~/Content/vendor/select2/select2.js"></script>
+    <script src="~/Content/vendor/select2/select2.min.js"></script>
+    <script src="~/Content/vendor/tilt/tilt.jquery.min.js"></script>
 
 <script>
     $('.js-tilt').tilt({
@@ -76,7 +100,7 @@
 </script>
 <!--===============================================================================================-->
 <script src="js/main.js"></script>
-
+   
 
     </body>
 </html>
