La - Configurações do Login

--- a/SupplierRanking/Views/Login/Login.cshtml
+++ b/SupplierRanking/Views/Login/Login.cshtml
@@ -1,7 +1,8 @@
-﻿ @{ 
+﻿@{ 
      ViewBag.Title = "Login";
+     Layout = "~/Views/Shared/LoginLayout.cshtml";
+}
 
- }
 <div class="limiter">
     <div class="container-login100">
         <div class="wrap-login100">
