--- a/SupplierRanking/Views/Shared/LoginLayout.cshtml
+++ b/SupplierRanking/Views/Shared/LoginLayout.cshtml
@@ -1,106 +1,110 @@
-﻿ <!DOCTYPE html>
-	
+﻿<!DOCTYPE html>
 <html>
-<head>
-    <link href="~/Content/vendor/animate/animate.css" rel="stylesheet" />
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <title>@ViewBag.Title - Supplier Ranking</title>
 
-    <link href="~/Content/vendor/bootstrap/css/bootstrap-grid.css" rel="stylesheet" />
-    <link href="~/Content/vendor/bootstrap/css/bootstrap-grid.min.css" rel="stylesheet" />
-    <link href="~/Content/vendor/bootstrap/css/bootstrap-reboot.css" rel="stylesheet" />
-    <link href="~/Content/vendor/bootstrap/css/bootstrap-reboot.min.css" rel="stylesheet" />
-    <link href="~/Content/vendor/bootstrap/css/bootstrap.css" rel="stylesheet" />
-    <link href="~/Content/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <a href="~/Content/vendor/bootstrap/css/bootstrap-grid.css.map">~/Content/vendor/bootstrap/css/bootstrap-grid.css.map</a>
-    <a href="~/Content/vendor/bootstrap/css/bootstrap-grid.min.css.map">~/Content/vendor/bootstrap/css/bootstrap-grid.min.css.map</a>
-    <a href="~/Content/vendor/bootstrap/css/bootstrap-reboot.css.map">~/Content/vendor/bootstrap/css/bootstrap-reboot.css.map</a>
-    <a href="~/Content/vendor/bootstrap/css/bootstrap-reboot.min.css.map">~/Content/vendor/bootstrap/css/bootstrap-reboot.min.css.map</a>
-    <a href="~/Content/vendor/bootstrap/css/bootstrap.css.map">~/Content/vendor/bootstrap/css/bootstrap.css.map</a>
-    <a href="~/Content/vendor/bootstrap/css/bootstrap.min.css.map">~/Content/vendor/bootstrap/css/bootstrap.min.css.map</a>
-    <link href="~/Content/vendor/css-hamburgers/hamburgers.css" rel="stylesheet" />
-    <link href="~/Content/vendor/css-hamburgers/hamburgers.min.css" rel="stylesheet" />
-    <link href="~/Content/vendor/select2/select2.css" rel="stylesheet" />
-    <link href="~/Content/vendor/select2/select2.min.css" rel="stylesheet" />
-    <link href="~/Content/css/main.css" rel="stylesheet" />
-    <link href="~/Content/css/util.css" rel="stylesheet" />
-</head>
-<body>
-<div class="limiter">
-    <div class="container-login100">
-        <div class="wrap-login100">
-            <div class="login100-pic js-tilt" data-tilt>
+        <!-- INÍCIO - CSS de Configuração -->
+        <link href="~/Content/vendor/animate/animate.css" rel="stylesheet" />
+        <link href="~/Content/vendor/bootstrap/css/bootstrap-grid.css" rel="stylesheet" />
+        <link href="~/Content/vendor/bootstrap/css/bootstrap-grid.min.css" rel="stylesheet" />
+        <link href="~/Content/vendor/bootstrap/css/bootstrap-reboot.css" rel="stylesheet" />
+        <link href="~/Content/vendor/bootstrap/css/bootstrap-reboot.min.css" rel="stylesheet" />
+        <link href="~/Content/vendor/bootstrap/css/bootstrap.css" rel="stylesheet" />
+        <link href="~/Content/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+        <link href="~/Content/vendor/css-hamburgers/hamburgers.css" rel="stylesheet" />
+        <link href="~/Content/vendor/css-hamburgers/hamburgers.min.css" rel="stylesheet" />
+        <link href="~/Content/vendor/select2/select2.css" rel="stylesheet" />
+        <link href="~/Content/vendor/select2/select2.min.css" rel="stylesheet" />
+        <!-- FIM - CSS de Configuração -->
 
-                
+        <!-- INÍCIO - Nossos CSS -->
+        <link href="~/Content/css/main.css" rel="stylesheet" />
+        <link href="~/Content/css/util.css" rel="stylesheet" />
+        <!-- FIM - Nossos CSS -->
+    </head>
+    <body>
+        <div class="limiter">
+            <div class="container-login100">
+                <div class="wrap-login100">
+                    <div class="login100-pic js-tilt" data-tilt></div>
+
+                    <form class="login100-form validate-form">
+                        <span class="login100-form-title">
+                            Member Login
+                        </span>
+
+                        <div class="wrap-input100 validate-input" 
+                             data-validate="Valid email is required: ex@abc.xyz">
+                            <input class="input100" type="text" name="email" placeholder="Email">
+                            <span class="focus-input100"></span>
+                            <span class="symbol-input100">
+                                <i class="fa fa-envelope" aria-hidden="true"></i>
+                            </span>
+                        </div>
+
+                        <div class="wrap-input100 validate-input" 
+                             data-validate="Password is required">
+                            <input class="input100" type="password" name="pass" placeholder="Password">
+                            <span class="focus-input100"></span>
+                            <span class="symbol-input100">
+                                <i class="fa fa-lock" aria-hidden="true"></i>
+                            </span>
+                        </div>
+
+                        <div class="container-login100-form-btn">
+                            <button class="login100-form-btn">
+                                Login
+                            </button>
+                        </div>
+
+                        <div class="text-center p-t-12">
+                            <span class="txt1">
+                                Forgot
+                            </span>
+                            <a class="txt2" href="#">
+                                Username / Password?
+                            </a>
+                        </div>
+
+                        <div class="text-center p-t-136">
+                            <a class="txt2" href="#">
+                                Create your Account
+                                <i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
+                            </a>
+                        </div>
+                    </form>
+                </div>
             </div>
-
-            <form class="login100-form validate-form">
-                <span class="login100-form-title">
-                    Member Login
-                </span>
-
-                <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
-                    <input class="input100" type="text" name="email" placeholder="Email">
-                    <span class="focus-input100"></span>
-                    <span class="symbol-input100">
-                        <i class="fa fa-envelope" aria-hidden="true"></i>
-                    </span>
-                </div>
-
-                <div class="wrap-input100 validate-input" data-validate="Password is required">
-                    <input class="input100" type="password" name="pass" placeholder="Password">
-                    <span class="focus-input100"></span>
-                    <span class="symbol-input100">
-                        <i class="fa fa-lock" aria-hidden="true"></i>
-                    </span>
-                </div>
-
-                <div class="container-login100-form-btn">
-                    <button class="login100-form-btn">
-                        Login
-                    </button>
-                </div>
-
-                <div class="text-center p-t-12">
-                    <span class="txt1">
-                        Forgot
-                    </span>
-                    <a class="txt2" href="#">
-                        Username / Password?
-                    </a>
-                </div>
-
-                <div class="text-center p-t-136">
-                    <a class="txt2" href="#">
-                        Create your Account
-                        <i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
-                    </a>
-                </div>
-            </form>
         </div>
-    </div>
-</div>
+
+        <!-- INÍCIO - Conteúdo -->
+        <div>
+            @RenderBody();
+        </div>
+        <!-- FIM - Conteúdo -->
+
+        <!-- INÍCIO - Script's de configuração -->
+        <script src="~/Content/vendor/bootstrap/js/bootstrap.js"></script>
+        <script src="~/Content/vendor/bootstrap/js/bootstrap.min.js"></script>
+        <script src="~/Content/vendor/bootstrap/js/popper.js"></script>
+        <script src="~/Content/vendor/bootstrap/js/popper.min.js"></script>
+        <script src="~/Content/vendor/bootstrap/js/tooltip.js"></script>
+        <script src="~/Content/vendor/jquery/jquery-3.2.1.min.js"></script>
+        <script src="~/Content/vendor/select2/select2.js"></script>
+        <script src="~/Content/vendor/select2/select2.min.js"></script>
+        <script src="~/Content/vendor/tilt/tilt.jquery.min.js"></script>
+
+        <script>
+            $('.js-tilt').tilt({
+                scale: 1.1
+            })
+        </script>
+        <!-- FIM - Script's de configuração -->
+
+        <!-- INÍCIO - Nossos JS -->
+        <script src="~/Content/js/login.js"></script>
    
-
-<!--<a href="~/Controllers/HomeController.cs">~/Controllers/HomeController.cs</a>-->
-    @RenderBody();
-
-    <script src="~/Content/vendor/bootstrap/js/bootstrap.js"></script>
-    <script src="~/Content/vendor/bootstrap/js/bootstrap.min.js"></script>
-    <script src="~/Content/vendor/bootstrap/js/popper.js"></script>
-    <script src="~/Content/vendor/bootstrap/js/popper.min.js"></script>
-    <script src="~/Content/vendor/bootstrap/js/tooltip.js"></script>
-    <script src="~/Content/vendor/jquery/jquery-3.2.1.min.js"></script>
-    <script src="~/Content/vendor/select2/select2.js"></script>
-    <script src="~/Content/vendor/select2/select2.min.js"></script>
-    <script src="~/Content/vendor/tilt/tilt.jquery.min.js"></script>
-
-<script>
-    $('.js-tilt').tilt({
-        scale: 1.1
-    })
-</script>
-<!--===============================================================================================-->
-<script src="js/main.js"></script>
-   
-
     </body>
 </html>
